<resources>
    <string name="app_name">Birthday app</string>
    <string name="topText">Nouvel Anniversaire</string>
    <string name="info">Information</string>
    <string name="placeholderName">Nom et Prénom</string>
    <string name="placeholderBirth">Date de naissance</string>
    <string name="sms">Envoi de SMS</string>
    <string name="placeholderTel">Numero de téléphone</string>
    <string name="button_text">Valider</string>
    <string name="button_reset">Reset</string>
    <string name="message_Toast">Un anniversaire est a fêter pour %s le %s, son numéro de téléphone %s</string>
</resources>
